# Final_Project

hao_project_test/: ScreenShot.py  V0.3.0.py  V0.3.0_noWordWrap.py  V0.3.1.py  V0.3.1_isWordWrap.py  config.toml  first_test.py  google_trans_test.py  google_vision_and_trans_test.py  image_compare.py  manifest-surfer-400014-6ed9f85a5367.json  manifest-surfer-400014-af662a2c9a6c.json  mouse_event_through_window_example.py  pyproject.toml  second_test.py  settings_v1.py  settings_v3.py  settings_v4.py  settings_v5.py  test.html  test.py  test_v1.py  test_v2.py  third_test.py  v0.4.0.py  v0.4.1.py  v0.5.0.py  ver0.6.0.py  ver0.7.0.py  ver0.8.0.py  ver0.9.0.py  vision_compare.py
john_project_test/: .gitignore  V0.2.0.py  V0.3.0_noWordWrap.py  V0.3.1_isWordWrap.py  config.toml  first_test.py  image_compare.py  open_url_test.py  pyproject.toml  settings_v1.py  settings_v2.py  settings_v4.py  settings_v5.py  test_v1.py  third_test.py  v0.4.0.py  v0.5.0.py
