[tool.poetry]
name = "hao-project-test"
version = "0.1.0"
description = ""
authors = ["SMH642800 <SMH642800@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
googletrans = "4.0.0-rc1"
google-cloud-vision = "^3.4.4"
google-cloud-translate = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
